[gd_scene load_steps=40 format=2]

[ext_resource path="res://Assets/BulletMan-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/BulletMan.gd" type="Script" id=2]
[ext_resource path="res://Assets/grenade_explosion.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2816, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3072, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3328, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3584, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3840, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4096, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4352, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4608, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4864, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5120, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5376, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 44.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "explosion",
"speed": 16.0
} ]

[sub_resource type="StyleBoxFlat" id=54]
bg_color = Color( 0.764706, 0.32549, 0.294118, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 0.466667, 0.705882, 0.360784, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="Theme" id=56]
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 54 )
ProgressBar/styles/fg = SubResource( 55 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 32.0
height = 144.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 40.0
height = 176.0

[node name="BulletMan" type="KinematicBody2D" groups=["BulletMan"]]
collision_layer = 2056
collision_mask = 0
script = ExtResource( 2 )
speed = 800

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, 0 )
z_index = 2
frames = SubResource( 23 )
frame = 13
playing = true

[node name="HealthBar" type="ProgressBar" parent="AnimatedSprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = 8.0
margin_right = 180.0
margin_bottom = 38.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 56 )
max_value = 250.0
value = 200.0
percent_visible = false

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 24 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2056
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, -8 )
shape = SubResource( 25 )

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
